updated ui for chat bubbles

--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "@react-pdf-viewer/core": "^3.8.0",
     "ai": "^3.3.26",
     "axios": "^1.7.7",
+    "canvas": "^3.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "font-awesome": "^4.7.0",
     "lucide-react": "^0.438.0",
+    "motion": "^12.23.12",
     "next": "^14.2.12",
-    "pdfjs-dist": "^3.2.146",
     "react": "^18",
     "react-dom": "^18",
     "serpapi": "^2.1.0",
