fix canvas build error 2nd attempt

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "canvas": "^3.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "file-loader": "^6.2.0",
     "font-awesome": "^4.7.0",
     "lucide-react": "^0.438.0",
     "motion": "^12.23.12",
