--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^0.0.54",
+    "@auth/mongodb-adapter": "^3.10.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-pdf-viewer/core": "^3.8.0",
@@ -24,8 +26,12 @@
     "file-loader": "^6.2.0",
     "font-awesome": "^4.7.0",
     "lucide-react": "^0.438.0",
+    "mongodb": "^6.19.0",
+    "mongoose": "^8.18.0",
     "motion": "^12.23.12",
     "next": "^14.2.12",
+    "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.1",
     "react": "^18",
     "react-dom": "^18",
     "serpapi": "^2.1.0",
